# wireless_paper

./: .gitignore  CMakeLists.txt  README.md  TODOS.md  VERSION  build.sh  build_ncs.sh  cmds  pm_static.yml  prj.conf  signing_key.pem  sysbuild.conf  west.yml
boards/: epaper_driver_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay  rpi_pico.overlay
boards/ar/epaper_driver/: Kconfig  Kconfig.defconfig  Kconfig.epaper_driver  board.cmake  board.yml  epaper_driver_common.dtsi  epaper_driver_nrf54l15_cpuapp.dts  epaper_driver_nrf54l15_cpuapp.yaml  epaper_driver_nrf54l15_cpuapp_defconfig  epaper_driver_nrf54l_05_10_15-pinctrl.dtsi  nrf54l_05_10_15_cpuapp_common.dtsi
boards/ar/epaper_tmp/: Kconfig.defconfig  Kconfig.epaper_driver  board.cmake  board.yml  epaper_driver_nrf54l15_cpuapp.dts  epaper_driver_nrf54l15_cpuapp_defconfig
boards/ar/pico_demo/: Kconfig.pico_demo  board.cmake  board.yml  pico_demo.dts
boards/ar/zeph_demo/: Kconfig.zeph_demo  board.cmake  board.yml  zeph_demo.dts  zeph_demo_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/generic_epaper/: CMakeLists.txt  Kconfig  generic_epaper.c
dts/bindings/: ar,generic-epaper.yml
hardware/: .gitignore  nrf_epaper.kicad_pcb  nrf_epaper.kicad_prl  nrf_epaper.kicad_pro  nrf_epaper.kicad_sch
host/: .env  .gitignore  Cargo.toml  README.md  build.rs  coap_device_simulator.py  compose.yml  convert.sh  swagger.yml  zephyr_cbor_example.c
host/migrations/2025-09-15-221944-0000_create_device_states/: down.sql  up.sql
host/migrations/2025-09-19-181736-0000_add_vbat/: down.sql  up.sql
host/migrations/2025-10-05-000000-0000_add_url_and_display_type/: down.sql  up.sql
host/migrations/2025-10-05-190414-0000_add_rotation/: down.sql  up.sql
host/patches/: coap+0.22.0.patch
host/src/: business.rs  database.rs  database_test.rs  image_fetcher.rs  main.rs  mock_database.rs  rest_api.rs  schema.rs  types.rs
host/web/: index.html
include/drivers/: generic_epaper.h
src/: cbor.c  cbor.h  coap_request.c  coap_request.h  main.c  tlv_data.hex.example  wrapped_settings.c  wrapped_settings.h
src/heatshrink/: README.md  heatshrink_config.h
sysbuild/: mcuboot.conf
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: epaper_driver_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
