[package]
name = "epaper-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["pure-rust-locales"] }
ciborium = "0.2.2"
coap = "0.22.0"
coap-lite = "0.13.3"
heatshrink = "0.2.0"
serde = { version = "1.0.223", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }

#[package.metadata.patch]
#crates = ["coap"]

#[patch.crates-io]
#coap = { path="./target/patch/coap-0.22.0" }

[build-dependencies]
patch-crate = "0.1.13"

[profile.dev]
opt-level = 3
